# infosrv-genai-docqa-poc

./: .dockerignore  .gitignore  Dockerfile.retrieval  Dockerfile.streamlit  README.md  note.txt  package-lock.json  package.json  pyproject.toml  requirements-streamlit.txt  requirements.txt  serverless.yaml
infra/local/chroma/: docker-compose.yml  docker-compose_v1.yml  otel-collector-config.yaml
infra/resources/: cloudwatch.yaml  dynamodb.yaml  ecs.yaml
src/agents/: retrieval_agent.py  router_agent.py  synthesis_agent.py
src/app/: config.py  main.py
src/app/components/: header.py  sidebar.py
src/app/tabs/: __init__.py  chatbot_tab.py  ingestion_tab.py  metrics_tab.py
src/app/utils/: auth.py  chatbot_helper.py  config.py  ingestion_helper.py  session.py
src/ingestion/: __init__.py  main.py  requirements.txt
src/ingestion/config/: settings.py
src/ingestion/core/: __init__.py  factory.py  pipeline.py
src/ingestion/models/: __init__.py  document.py
src/ingestion/sample_data/: nlp_intro.txt  vector_db.txt
src/ingestion/services/: __init__.py  classifier.py  embedder.py  loaders.py  processor.py  storage.py
src/ingestion/utils/: content_extractor.py
src/utils/: api_client.py
testdata/: john_doe.txt  john_smith.txt
